UPGRADE: building Wave 2 of the Polymath OS roadmap
